--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "npm-run-all -s -r json-server ng-test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "e2e": "npm-run-all -s -r json-server ng e2e",
     "ng-test": "ng test",
     "json-server": "node server.js"
   },
