--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -1,18 +1,18 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
+    "outDir": "../out-tsc/spec",
     "types": [
       "jasmine",
       "node"
     ]
   },
   "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
+    "test.ts",
+    "polyfills.ts"
   ],
   "include": [
-    "./test/*.spec.ts",
+    "../test/*.spec.ts",
     "**/*.d.ts"
   ]
 }
